--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,9 @@
 {
-  "name": "preact-with-ts",
-  "short_name": "preact-with-ts",
+  "name": "Sevipsagis | Portfolio",
+  "short_name": "Portfolio",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
-  "theme_color": "#673ab8",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
