--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,11 @@
 {
-  "name": "Sevipsagis | Portfolio",
-  "short_name": "Portfolio",
+  "name": "portfolio",
+  "short_name": "portfolio",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
+  "background_color": "#fff",
+  "theme_color": "#673ab8",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
